# cbinterface2

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
cbinterface/: cli.py  commands.py  config.py  enumerations.py  helpers.py  old_cli.py  playbooks.py  process.py  query.py  scripted_live_response.py  sensor.py  sessions.py
cbinterface/enterprise_edr/: cli.py  device.py  enumerations.py  intel.py  process.py  query.py  sessions.py  ubs.py
cbinterface/playbook_configs/: collect_browsing_history.ini  collect_scheduled_tasks.ini  delete_directory.ini  delete_scheduled_task.ini  delete_service.ini  force_restart.ini  get_user_accounts.ini
cbinterface/psc/: cli.py  commands.py  device.py  enumerations.py  intel.py  process.py  query.py  sessions.py  ubs.py
cbinterface/psc2/: cli.py  device.py  enumerations.py  process.py  query.py  sessions.py
cbinterface/response/: cli.py  commands.py  enumerations.py  process.py  query.py  sensor.py  sessions.py  watchlists.py
cbinterface/templates/: playbook.ini  remediate.ini
cbinterface/tools/: chromium_history_parser.py  get_chromium_browsing_data.bat
cbinterface2/: cli.py  collect.py  commands.py  helpers.py  process.py  query.py  sensor.py  sessions.py
tests/: test_cbinterface.py  test_cbinterface_psc.py  test_cbinterface_response.py
tests/test_data/: 00007c6f-0000-0a28-01d6-ffde20451832.json  H8NDJUE1-02361dc7-000009d4-00000000-1d70b8a6f55bfa7.json  ancestry_str.txt  cb_response_server_info.json  children.txt  crossprocs.txt  facet_data.json  facet_data_output.txt  filemods.txt  modloads.txt  netconns.txt  playbooking.around.ini  printed_process_info.txt  process_tree_str.txt  regmods.txt  remediating.around.ini
