[tool.poetry]
name = "cbinterface"
version = "2.0.2"
description = "command line tool for interfacing with multiple carbonblack environments to perform analysis and live response functions"
authors = ["Sean McFeely <mcfeelynaes@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/seanmcfeely/cbinterface2"
keywords = ["Carbon Black", "carbonblack"]
include = ["README.md"]

[tool.poetry.dependencies]
python = "^3.6"
cbapi = "^1.7.3"
coloredlogs = "^15.0"
argcomplete = "^1.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cbinterface = "cbinterface.cli:main"

[tool.black]
line-length = 120