[tool.poetry]
name = "cbinterface"
version = "2.3.13"
description = "command line tool for interfacing with multiple carbonblack environments to perform analysis and live response functions"
authors = ["Sean McFeely <mcfeelynaes@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ace-ecosystem/cbinterface2"
keywords = ["Carbon Black", "carbonblack"]
include = ["README.md"]

[tool.poetry.dependencies]
python = "^3.6"
cbapi = "^1.7.3"
coloredlogs = "^15.0"
argcomplete = "^1.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#[tool.poetry.scripts]
# https://github.com/python-poetry/poetry/blob/cddd6759f707d5a9d4865d07fddb0ff8107670e3/poetry/masonry/builders/editable.py#L27
# SCRIPT_TEMPLATE
# would be pretty sweet if poetry was more flexible so we could point directly to our own script file, OR,
# update SCRIPT_TEMPLATE to include '# PYTHON_ARGCOMPLETE_OK'
#cbinterface = "cbinterface.cli:main"

[tool.black]
line-length = 120
